<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/mazlogopump"
        android:layout_width="100.0dip"
        android:layout_height="80.0dip"
        android:layout_marginLeft="155.0dip"
        android:layout_marginTop="40.0dip"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140.0dip"
        android:text="@string/main_name"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_light"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textSize="40.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/relay1"
        android:layout_width="wrap_content"
        android:layout_height="70.0dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240.0dip"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:drawableBottom="@drawable/ic_relay"
        android:focusable="true"
        android:onClick="relay1"
        android:padding="5.0dip"
        android:text="@string/relay_1"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/relay2"
        android:layout_width="wrap_content"
        android:layout_height="70.0dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360.0dip"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:drawableBottom="@drawable/ic_relay"
        android:focusable="true"
        android:onClick="relay2"
        android:padding="5.0dip"
        android:text="@string/relay_2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/relay3"
        android:layout_width="wrap_content"
        android:layout_height="70.0dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480.0dip"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:drawableBottom="@drawable/ic_relay"
        android:focusable="true"
        android:onClick="relay3"
        android:padding="5.0dip"
        android:text="@string/relay_3"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="590.0dip"
        android:background="@android:color/holo_blue_light"
        android:clickable="true"
        android:drawableBottom="@mipmap/ic_notify"
        android:focusable="true"
        android:onClick="lightalert"
        android:padding="5.0dip"
        android:text="@string/light_alert"
        android:textColor="@android:color/white" />
</RelativeLayout>