<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_background">

    <ImageView
        android:id="@+id/mazlogo"
        android:layout_width="100.0dip"
        android:layout_height="80.0dip"
        android:layout_centerHorizontal="true"
        android:layout_margin="50.0dip"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55.0dip"
        android:layout_marginTop="140.0dip"
        android:text="@string/main_name"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_light"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textSize="40.0sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340.0dip"
        android:text="@string/gsm_number"
        android:textColor="@android:color/white"
        android:textSize="24.0sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/gsmnumber"
        android:layout_width="180.0dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430.0dip"
        android:background="@drawable/myeditbox"
        android:hint="+91"
        android:inputType="number"
        android:maxLength="10"
        android:padding="10.0dip"
        android:textSize="24.0sp" />

    <Button
        android:layout_width="170.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60.0dip"
        android:background="@android:color/holo_blue_light"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:onClick="save_number"
        android:text="@string/save_button"
        android:textColor="@android:color/white"
        android:textSize="24.0sp"
        android:textStyle="bold" />

</RelativeLayout>